# mkhook

./: .gitignore  CMakeLists.txt  LICENSE  README  compile_example.sh  injector.c
Example/: compile_example.sh  example_shellcode.asm  example_vulnerable_program.c
Libraries/: CMakeLists.txt
Libraries/CHelper/: CMakeLists.txt  Makefile  abort.c  abort.h  mem.c  mem.h  string_utils.c  string_utils.h
src/: CMakeLists.txt  injector.c  injector.h
